docs/3.x/generated/Classnames.md

## API\Request
## Access
## Archive
## ArchiveProcessor
## ArchiveProcessor\Parameters
## AuthResult
## Auth\Password
## Category\Subcategory
## Columns\ComputedMetricFactory
## Columns\Dimension
## Columns\DimensionMetricFactory
## Columns\Discriminator
## Columns\Join
## Columns\Join\ActionNameJoin
## Columns\Join\GoalNameJoin
## Columns\Join\SiteNameJoin
## Columns\MetricsList
## Columns\Updater
## Common
## Config
## DataAccess\LogAggregator
## DataTable
## DataTable\BaseFilter
## DataTable\Filter\AddColumnsProcessedMetrics
## DataTable\Filter\AddColumnsProcessedMetricsGoal
## DataTable\Filter\AddSegmentByLabel
## DataTable\Filter\AddSegmentByLabelMapping
## DataTable\Filter\AddSegmentByRangeLabel
## DataTable\Filter\AddSegmentBySegmentValue
## DataTable\Filter\AddSegmentValue
## DataTable\Filter\AddSummaryRow
## DataTable\Filter\BeautifyRangeLabels
## DataTable\Filter\BeautifyTimeRangeLabels
## DataTable\Filter\CalculateEvolutionFilter
## DataTable\Filter\ColumnCallbackAddColumn
## DataTable\Filter\ColumnCallbackAddColumnPercentage
## DataTable\Filter\ColumnCallbackAddColumnQuotient
## DataTable\Filter\ColumnCallbackAddMetadata
## DataTable\Filter\ColumnCallbackDeleteMetadata
## DataTable\Filter\ColumnCallbackDeleteRow
## DataTable\Filter\ColumnCallbackReplace
## DataTable\Filter\ColumnDelete
## DataTable\Filter\ExcludeLowPopulation
## DataTable\Filter\GroupBy
## DataTable\Filter\Limit
## DataTable\Filter\MetadataCallbackAddMetadata
## DataTable\Filter\MetadataCallbackReplace
## DataTable\Filter\Pattern
## DataTable\Filter\PatternRecursive
## DataTable\Filter\PrependSegment
## DataTable\Filter\PrependValueToMetadata
## DataTable\Filter\RemoveSubtables
## DataTable\Filter\ReplaceColumnNames
## DataTable\Filter\ReplaceSummaryRowLabel
## DataTable\Filter\Sort
## DataTable\Filter\Truncate
## DataTable\Map
## DataTable\Row
## DataTable\Simple
## Date
## Db
## DbHelper
## Filesystem
## FrontController
## Http
## IP
## Intl\Data\Provider\CurrencyDataProvider
## Intl\Data\Provider\LanguageDataProvider
## Intl\Data\Provider\RegionDataProvider
## Log
## Mail
## Measurable\Measurable
## Menu\MenuAbstract
## Menu\MenuAdmin
## Menu\MenuTop
## Metrics
## Metrics\Formatter
## Metrics\Formatter\Html
## NoAccessException
## Nonce
## Notification
## Notification\Manager
## Option
## Period
## Period\Range
## Piwik
## Plugin
## Plugin\API
## Plugin\AggregatedMetric
## Plugin\Archiver
## Plugin\Controller
## Plugin\ControllerAdmin
## Plugin\Dimension\ActionDimension
## Plugin\Dimension\ConversionDimension
## Plugin\Dimension\VisitDimension
## Plugin\Manager
## Plugin\Menu
## Plugin\Metric
## Plugin\ProcessedMetric
## Plugin\Report
## Plugin\ReportsProvider
## Plugin\Segment
## Plugin\SettingsProvider
## Plugin\Tasks
## Plugin\ViewDataTable
## Plugin\Visualization
## Plugins\Actions\Columns\Metrics\AveragePageGenerationTime
## Plugins\Actions\Columns\Metrics\AverageTimeOnPage
## Plugins\Actions\Columns\Metrics\BounceRate
## Plugins\Actions\Columns\Metrics\ExitRate
## Plugins\Contents\Columns\Metrics\InteractionRate
## Plugins\CoreHome\Columns\Metrics\ActionsPerVisit
## Plugins\CoreHome\Columns\Metrics\AverageTimeOnSite
## Plugins\CoreHome\Columns\Metrics\BounceRate
## Plugins\CoreHome\Columns\Metrics\CallableProcessedMetric
## Plugins\CoreHome\Columns\Metrics\ConversionRate
## Plugins\CoreHome\Columns\Metrics\EvolutionMetric
## Plugins\CoreHome\Columns\Metrics\VisitsPercent
## Plugins\CoreHome\SystemSummary\Item
## Plugins\CoreVisualizations\Metrics\Formatter\Numeric
## Plugins\CoreVisualizations\Visualizations\Cloud\Config
## Plugins\CoreVisualizations\Visualizations\Graph\Config
## Plugins\CoreVisualizations\Visualizations\HtmlTable\Config
## Plugins\CoreVisualizations\Visualizations\JqplotGraph\Config
## Plugins\CoreVisualizations\Visualizations\JqplotGraph\Evolution\Config
## Plugins\CoreVisualizations\Visualizations\Sparklines\Config
## Plugins\CustomPiwikJs\TrackerUpdater
## Plugins\CustomVariables\ProfileSummary\VisitScopeSummary
## Plugins\DevicePlugins\DevicePlugins
## Plugins\DevicesDetection\ProfileSummary\DevicesSummary
## Plugins\Diagnostics\DiagnosticService
## Plugins\Diagnostics\Diagnostic\DiagnosticResult
## Plugins\Diagnostics\Diagnostic\DiagnosticResultItem
## Plugins\Ecommerce\ProfileSummary\EcommerceSummary
## Plugins\Events\Columns\Metrics\AverageEventValue
## Plugins\Goals\Columns\Metrics\AverageOrderRevenue
## Plugins\Goals\Columns\Metrics\AveragePrice
## Plugins\Goals\Columns\Metrics\AverageQuantity
## Plugins\Goals\Columns\Metrics\GoalConversionRate
## Plugins\Goals\Columns\Metrics\GoalSpecificProcessedMetric
## Plugins\Goals\Columns\Metrics\GoalSpecific\AverageOrderRevenue
## Plugins\Goals\Columns\Metrics\GoalSpecific\ConversionRate
## Plugins\Goals\Columns\Metrics\GoalSpecific\Conversions
## Plugins\Goals\Columns\Metrics\GoalSpecific\ItemsCount
## Plugins\Goals\Columns\Metrics\GoalSpecific\Revenue
## Plugins\Goals\Columns\Metrics\GoalSpecific\RevenuePerVisit
## Plugins\Goals\Columns\Metrics\ProductConversionRate
## Plugins\Goals\Columns\Metrics\RevenuePerVisit
## Plugins\Live\ProfileSummaryProvider
## Plugins\Live\ProfileSummary\ImportantVisits
## Plugins\Live\ProfileSummary\ProfileSummaryAbstract
## Plugins\Live\ProfileSummary\Summary
## Plugins\Live\Visitor
## Plugins\Live\VisitorDetailsAbstract
## Plugins\Live\Visualizations\VisitorLog\Config
## Plugins\Login\SessionInitializer
## Plugins\MobileMessaging\SMSProvider
## Plugins\MultiSites\Columns\Metrics\EcommerceOnlyEvolutionMetric
## Plugins\Tour\Engagement\Challenge
## Plugins\TreemapVisualization\TreemapConfig
## Plugins\UserCountry\ProfileSummary\LocationSummary
## Plugins\UsersManager\UserPreferences
## Plugins\VisitFrequency\Columns\Metrics\ReturningMetric
## RankingQuery
## Registry
## Report\ReportWidgetConfig
## Report\ReportWidgetFactory
## ScheduledTask
## Scheduler\Schedule\Daily
## Scheduler\Schedule\Hourly
## Scheduler\Schedule\Monthly
## Scheduler\Schedule\Schedule
## Scheduler\Schedule\SpecificTime
## Scheduler\Schedule\Weekly
## Scheduler\Scheduler
## Scheduler\Task
## Segment
## SettingsPiwik
## SettingsServer
## Settings\FieldConfig
## Settings\FieldConfig\ArrayField
## Settings\FieldConfig\MultiPair
## Settings\Plugin\SystemConfigSetting
## Settings\Plugin\SystemSetting
## Settings\Setting
## Settings\Settings
## Singleton
## Site
## TaskScheduler
## Translation\Translator
## Updater
## Updater\Migration
## Updater\Migration\Db
## Updater\Migration\Db\Factory
## Updater\Migration\Factory
## Updater\Migration\Plugin\Factory
## Updates
## Url
## UrlHelper
## Version
## View
## ViewDataTable\Config
## ViewDataTable\Factory
## ViewDataTable\RequestConfig
## View\UIControl
## Widget\Widget
## Widget\WidgetConfig
## Widget\WidgetContainerConfig
## Widget\WidgetsList
